# pelican-bibliography

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tasks.py
examples/simple/: README.md  pelicanconf.py  publishconf.py  requirements.txt  tasks.py
examples/simple/content/bibliography/: metadata.yaml  references.bib
examples/simple/content/pages/: bib.md  index.md
examples/simple/templates/: simplebibliography.html
pelican/plugins/bibliography/: __init__.py  bibliography.py  pybtex_plugins.py  test_bibliography.py
pelican/plugins/bibliography/bibtex/: __init__.py  lexer.py  models.py  parser.py
pelican/plugins/bibliography/data/templates/: bibentry.html  bibliography.html  research.html
